# agent-ludens

./: .gitignore  AGENTS.md  MANIFEST.md  README.md  eslint.config.js  package-lock.json  package.json  playwright.config.ts  pyproject.toml  tsconfig.json  vitest.config.ts
.playwright-cli/: page-2026-03-29T06-40-58-945Z.yml  page-2026-03-29T06-41-11-612Z.yml  page-2026-03-29T06-41-14-349Z.yml  page-2026-03-29T06-41-19-935Z.yml  page-2026-03-29T06-41-50-995Z.yml  page-2026-03-29T06-41-53-115Z.yml
docs/: README.md  agent-adapters.md  agent-life-os.html  api.md  api_spec.md  architecture.md  community_publish_checklist.md  community_update_template.md  config-storage.md  free_time_maintenance.md  implementation_plan.md  persistence_and_context.md  product-spec.md  product_spec.md  production-readiness.md  project_structure.md  release_checklist.md  release_evidence_template.md  runtime_loop.md  scope_alignment_note.md  testing-and-live-validation.md  testing_strategy.md  ui_ux_spec.md  work-packages.md
output/playwright/: browser-live-e2e-7101-completed.yml
scripts/: copy-static.mjs
src/adapters/: base.ts  fake.ts  probes.ts
src/agent_ludens/: __init__.py  __main__.py  activity_manager.py  adapters.py  app.py  cli.py  config.py  models.py  peer_client.py  prompting.py  store.py  supervisor.py  utils.py
src/cli/: index.ts
src/core/: auth.ts  config.ts  doctor.ts  event-store.ts  session-manager.ts  storage.ts
src/server/: app.ts
src/shared/: contracts.ts  errors.ts  ids.ts  redaction.ts
src/ui/: app.css  app.js  index.html
tests/: conftest.py  helpers.py
(+15 files in other folders)
