[project]
name = "agent-ludens"
version = "0.1.0"
description = "Always-on local control plane around Codex"
readme = "README.md"
authors = [{ name = "PJH6029", email = "top231902@naver.com" }]
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.135.2",
  "httpx>=0.28.1",
  "pydantic>=2.12.5",
  "pydantic-settings>=2.13.1",
  "uvicorn>=0.42.0",
]

[project.scripts]
agent-ludens = "agent_ludens.cli:main"

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
  "anyio>=4.13.0",
  "hypothesis>=6.151.10",
  "mypy>=1.19.1",
  "pytest>=9.0.2",
  "pytest-asyncio>=1.3.0",
  "ruff>=0.15.8",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
  "live: runs live Codex integration tests",
  "codex_real: uses the real Codex CLI",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]
ignore = ["E501", "ASYNC109"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["agent_ludens"]
ignore_missing_imports = false
